tests/negative/semantic/while_condition_string/input.ci
void main() {
    while ("x") {
        print("x\n");
    }
}
